# nvidia-data-flywheel

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  CAVEATS.md  LICENSE-3rd-party.txt  NVIDIA-CONTRIBUTING.md  NVIDIA-LICENSE-3rd-party.txt  NVIDIA-LICENSE-dataset  NVIDIA-README.md  README.md  conftest.py  mlrun-data-flywheel-tutorial.ipynb  openapi.json  project.yaml  project_setup.py  pyproject.toml  pytest.ini  requirements.txt
architecture/: nim_workflow.puml
config/: config.yaml
data/: aiva-final.jsonl  aiva-test.jsonl  aiva_l1_dataset.jsonl  aiva_primary_assistant_dataset.jsonl
deploy/: Dockerfile  NVIDIA-README.md  docker-compose.dev.yaml  docker-compose.yaml
deploy/mlrun/: Dockerfile
docs/: 01-architecture.md  02-quickstart.md  03-configuration.md  04-audience-guide.md  05-limitations-best-practices.md  06-evaluation-types-and-metrics.md  data-logging.md  dataset-validation.md  scripts.md
notebooks/: README.md  aiq-aiva-data-flywheel-tutorial.ipynb  aiva-data-flywheel-tutorial.ipynb  data-flywheel-bp-tutorial.ipynb  job_monitor_helper.py  monitor_job.ipynb  sandbox.ipynb
notebooks/mlrun/: mlrun-data-flywheel-tutorial.ipynb
notebooks/utils/: deploy-mlflow.sh  job_monitor_helper.py  mlflow-compose.yml  mlflow_helper.py
scripts/: check_requirements.sh  cleanup_resources.sh  clear_all_volumes.sh  clear_es_volume.sh  clear_mongodb_volume.sh  clear_redis_volume.sh  deploy-nmp.sh  generate_openapi.py  mlrun.sh  quick-test.sh  run-dev.sh  run.sh  stop.sh
src/: app.py  config.py  log_utils.py
src/api/: db.py  db_manager.py  endpoints.py  job_service.py  models.py  schemas.py
src/scripts/: aiva.py  cleanup_running_resources.py  load_test_data.py  utils.py
src/tasks/: cli.py  tasks.py
tests/: __init__.py
(+54 files in other folders)
