[project]
name = "fbp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.16",
    "elasticsearch==8.17.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "uvicorn>=0.34.0",
    "celery[redis]>=5.5.1",
    "openai>=1.12.0",
    "huggingface-hub>=0.20.3",
    "requests>=2.31.0",
    "pymongo>=4.12.0",
    "pydantic-settings>=2.9.1",
    "tiktoken>=0.9.0",
    "h11==0.16.0",
]

[dependency-groups]
dev = [
    "ipython>=8.35.0",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "papermill>=2.6.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "pre-commit>=3.6.0",
    "ruff>=0.3.0",
    "licensecheck>=2025.1.0",
    "watchfiles>=1.0.5",
    "flower>=2.0.1",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "watchdog>=6.0.0",
    "watchfiles>=1.0.5",
    "tabulate>=0.9.0",
]

[tool.ruff]
# Target Python version
target-version = "py310"

# Line length
line-length = 100

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "third_party",
    "docs"
]

# Auto-fix behavior
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint]
# Enable specific rules
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "RUF"  # ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501"  # Line too long (handled by formatter)
]
